<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/fragment_detail_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:elevation="5dp"
        app:contentInsetStart="0dp"
        app:contentInsetStartWithNavigation="0dp"
        app:layout_constraintTop_toTopOf="parent"
        app:navigationIcon="?attr/homeAsUpIndicator"
        app:title="@string/detail_page_name" />

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginStart="@dimen/default_padding"
        android:layout_marginEnd="@dimen/default_padding"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fragment_detail_toolbar">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <ImageView
                android:id="@+id/fragment_detail_icon_company"
                android:layout_width="70dp"
                android:layout_height="70dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/fragment_detail_header"
                android:layout_width="0dp"
                android:layout_height="0dp"
                android:ellipsize="end"
                android:gravity="center_vertical"
                android:maxLines="3"
                android:textAllCaps="true"
                app:layout_constraintBottom_toBottomOf="@+id/fragment_detail_icon_company"
                app:layout_constraintEnd_toStartOf="@+id/fragment_detail_icon_company"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION DESCRIPTION" />

            <TextView
                android:id="@+id/fragment_detail_company_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/detail_page_company_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_header" />

            <TextView
                android:id="@+id/fragment_detail_company_name"
                style="@style/DescTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_company_label"
                tools:text="Viber" />

            <TextView
                android:id="@+id/fragment_detail_location_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_page_location_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_company_name" />

            <TextView
                android:id="@+id/fragment_detail_location_name"
                style="@style/DescTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_location_label"
                tools:text="Viber" />

            <TextView
                android:id="@+id/fragment_detail_type_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_page_type_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_location_name" />

            <TextView
                android:id="@+id/fragment_detail_type_name"
                style="@style/DescTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_type_label"
                tools:text="Full time Job" />

            <TextView
                android:id="@+id/fragment_detail_description_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_page_description_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_type_name" />

            <TextView
                android:id="@+id/fragment_detail_description_name"
                style="@style/DescTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_description_label"
                tools:text="Description" />

            <TextView
                android:id="@+id/fragment_detail_how_to_apply_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/detail_page_how_to_apply_label"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_description_name" />

            <TextView
                android:id="@+id/fragment_detail_how_to_apply_name"
                style="@style/DescTextViewStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:layout_constraintTop_toBottomOf="@+id/fragment_detail_how_to_apply_label"
                tools:text="how to apply" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.core.widget.NestedScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
